# crop-image

./: README.md  crop.py  pyproject.toml
