[tool.poetry]
name = "crop_image"
version = "0.1.0"
description = ""
authors = ["Cat Chau <cat.chau@kyanon.digital>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.3.2"
ipdb = "^0.13.9"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
